@@ -1,37 +1,39 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX phpldapadmin-1.2.1.1-fix-cmd-exploit.patch 716 RMD160 53234a28cbba93e29be796c84b3f735065bef428 SHA1 bb26087375bdb8ace84254b9e9c4537ab691bbaf SHA256 b0c7822c7e36d037e15839046bdfc842540b972633e293c5d96e6d3117f782e0
-AUX phpldapadmin-1.2.1.1-fix-functions-exploit.patch 939 RMD160 7c4cd4aa9290ad298afe18ef78765ba0619a365b SHA1 6c7f3b29e696b1b16ffead286962dca98970674d SHA256 94344146e0434ac7c70375f4cbfef9bcd40897c06fb3eddc0b39eaed0c5c669d
-AUX phpldapadmin-1.2.1.1-fix-magic-quotes.patch 829 RMD160 085053d13ba91c8b69d5b0e4d6ce3fd0e627780b SHA1 8f6ea7971157091febc6a7ff2f6fe97ed908df38 SHA256 7cce069d30a5c4067743de8e91d0d6bd4d9faaaf169ed342a3890bf07ced8817
-AUX phpldapadmin-1.2.2-base.patch 1115 RMD160 d1be4823aa4324fe64a3926a7a6d886c66cce38f SHA1 ac32c511f07314041981514ac6c55e8ba42a2e28 SHA256 33c012fc00d0a170ff57e50624ec0e1018ace3fe9350a5a02ffe2ae8e1751d33
-AUX postinstall2-en.txt 131 RMD160 f1f681b3b5094f555e6adfca8d70d4ca1b14ae4b SHA1 deecc59339d6c83dad797c0f8cfab9ea0110153a SHA256 e2dc7bea366789a303eb9a90d1bced655cea00469202859af40bf19c00505d38
-DIST phpldapadmin-1.2.0.4.tgz 1291545 RMD160 23b6a9afd438add7ed48ff390d5b4d4400df54b4 SHA1 7b364065e91f4dca606432c42fa2ae48e54f04ce SHA256 e4887ed0db63c926162d79d603add21a669103ad2f75a7b90686a18eed8a6330
-DIST phpldapadmin-1.2.0.5.tgz 1345901 RMD160 7b3e194420d7360001faa709b046423d8ac939bf SHA1 0720ec05bfe91520bdd15e38c79f949f18d355eb SHA256 ee75da1dbba023499fdf50d6cedea9bcdb9caad017b15ed2e31700bcc61dfcfd
-DIST phpldapadmin-1.2.1.1.tgz 1468961 RMD160 c78bd0f056f7f5f8b150360e6ee0ef3f37d6560c SHA1 f30d76205891fbd01fab468af1f8430597983787 SHA256 1fa6373c500a193a8868cb6a753f3b5218a92374b792994129c0c1b69d4d1090
-DIST phpldapadmin-1.2.2.tgz 1415565 RMD160 dd93d9558c9780b014f066d070b496e2804b9565 SHA1 2904923eb25173d108b556c70fb3d42cd6e0e289 SHA256 8629ea3f14630d4dd74099c997ac9795240a6417d5d124517ba5860c12d8a239
-EBUILD phpldapadmin-1.2.0.4-r1.ebuild 983 RMD160 2228477215296b381a25ece0ac9f81d4cdead10e SHA1 340b6602090d046c526914f56a2ad55023f3e334 SHA256 cbb2de3c6c29336841d910feaf10b559158f85031f47b52d3f1574f2d985b79b
-EBUILD phpldapadmin-1.2.0.5.ebuild 970 RMD160 702248b5bf778558a6704f761755f82060f0d053 SHA1 aea420c3f57d9de49e731ab8b6e3b7cc806c36ee SHA256 b785da167be298f837071d8e8d5a741d2c6f1e18038badd54349ed111f0e04d5
-EBUILD phpldapadmin-1.2.1.1-r1.ebuild 1359 RMD160 7459adeaca2213071d4adc19e0d8417f19a1d959 SHA1 cca736aaa69b6728ca6f03ff68135f75da60b315 SHA256 f1f21dc696d4f862bfffdf45bd8b0b5d32d62fa9731713ae3dbc3c447ea3b5e4
-EBUILD phpldapadmin-1.2.1.1.ebuild 1129 RMD160 37a8f6d38c93c7eef6aa7c04e73c2e66f2df498f SHA1 ec4b1fd9da21bee274d685efda10cd81cc417005 SHA256 40f439fbda56140a71f345358aeb603b17440464497a0168b28368a157ca5591
-EBUILD phpldapadmin-1.2.2-r1.ebuild 1315 RMD160 cd2109c7d7e7016a64622179d718b400b23756c0 SHA1 98aa73058bd7e09819ae45bddd8a8ccc6a182345 SHA256 28fff8e9869aae9519cfadd4e24e8acbbb509e18b0eef5ab8f9a9d372aba933c
-EBUILD phpldapadmin-1.2.2.ebuild 1136 RMD160 358d9e441b5b6b489ecdabc7f58051aeedbd84b7 SHA1 5965b38e7d6c149198725380fb2549d2b55bfc2f SHA256 301a656b15c19f35f85c9bae9607fff14c4c58664849b0dd10bb97a53d0f3f65
-MISC ChangeLog 9509 RMD160 1b5006f6deb9a4737abb5726e280d938a1c2cb6f SHA1 45aff9fe9429238ee539d53c874bee3fd9dbd19b SHA256 23e379a2922428e087fbdbf15bcb8ffeb04633c648e88231013c2cc8051ccfc2
-MISC metadata.xml 483 RMD160 9f29226203f0c22470a627939b84edbe57d40a7c SHA1 69affdfca1b1dd98d302336a0e47d708e96317ba SHA256 4da024bde528d8117f42de927efa5e86dd4445b018a818608e1db16969957186
+AUX phpldapadmin-1.2.1.1-fix-cmd-exploit.patch 716 SHA256 b0c7822c7e36d037e15839046bdfc842540b972633e293c5d96e6d3117f782e0 SHA512 c0c8085d321bf90a20c776b266f537bfa4e92d184e26e7a613e23eb8d6b0068116ec08af9ee784a16f61641731abc20b560be2c097bbd086744676762fe19ea6 WHIRLPOOL 27eade2701837d70cf5a22df5dcd29b7b99704b4c69174512e4287b260ff03d3ea327db1d49221de76d360f92422e778d5f448bc3f4074fa92a4a00f08d06ca9
+AUX phpldapadmin-1.2.1.1-fix-functions-exploit.patch 939 SHA256 94344146e0434ac7c70375f4cbfef9bcd40897c06fb3eddc0b39eaed0c5c669d SHA512 0668f5d2e8b7882b9e092ac089d7ec18fe78f3bd67c5a4d7abeba044e65a6385e3f69205e2f3a3ef3a99ffd84be95c66ed3573ce78ce6c60c2b4f6237aa35a37 WHIRLPOOL 81e2f45244f2a1483f05a600b2c39b7a3a21329220f54737dc928e6e755db07fc69d57a3aa37d93604e711d4927b9bd8b84436bf0f74ba4f91bffa06a273dcbd
+AUX phpldapadmin-1.2.1.1-fix-magic-quotes.patch 829 SHA256 7cce069d30a5c4067743de8e91d0d6bd4d9faaaf169ed342a3890bf07ced8817 SHA512 64830cc864dbbe3d0aa72d0e1165b787287430f3ea7507c8e9df2115b03df73944c63a4e9c09a7f8c9a11d41f48327ee26c204ede3bae2209b0f47076d5587b3 WHIRLPOOL a539598b966e53b3df565711546adea1515621d015b3c1de4375a7d92735c56d551101d1cbfd0d216fdd843ad1311573cb4ac7867d175ecd8e8154da6fc1b794
+AUX phpldapadmin-1.2.2-base.patch 1115 SHA256 33c012fc00d0a170ff57e50624ec0e1018ace3fe9350a5a02ffe2ae8e1751d33 SHA512 d44c85a7cc6a6a0502e049e39127c11c196f08f1e5363422343ff8a63e49a1a2ffd7b7c46a4a4ac7623f2efad564dc60f240a2b3c4d2242a53df4163ff0ee82d WHIRLPOOL 9d28ca35ce5926f58456df07d38e1e9e2d0ad8e080a196bdbc607217a3db5f34daa3657188b831c4075b53099c16bc2e8ae6b32a05d645f41da89159382aef7a
+AUX postinstall2-en.txt 131 SHA256 e2dc7bea366789a303eb9a90d1bced655cea00469202859af40bf19c00505d38 SHA512 f465adc204ef40675848e39e37bab3f2eb5054549e3b787953793ece683df84a52373d23383601b3c53c6b98bf8f1de83c6d83be117be9c00da7058763709d6b WHIRLPOOL 1903859baaaf44d93eaae4605878d282c8c7020cbab9e7b670b11716433dc5a6d70074ceec2a80533727e0e72c5f6325b03b65fab1bf8692684bd57dc9223b39
+DIST phpldapadmin-1.2.0.4.tgz 1291545 SHA256 e4887ed0db63c926162d79d603add21a669103ad2f75a7b90686a18eed8a6330
+DIST phpldapadmin-1.2.0.5.tgz 1345901 SHA256 ee75da1dbba023499fdf50d6cedea9bcdb9caad017b15ed2e31700bcc61dfcfd
+DIST phpldapadmin-1.2.1.1.tgz 1468961 SHA256 1fa6373c500a193a8868cb6a753f3b5218a92374b792994129c0c1b69d4d1090 SHA512 1bfa0b8bdf05805f28cf97b7c6a9219209d60f33a619c56a2b3cf48bf70a2e9323fe9ca912afb0b4494b28366da284d5beaf25b282b20bb7a50b5aa04edf1e94 WHIRLPOOL 88f48e0cb27011d7593f174d5fe7b25549ea5f0d4ce425b77ebbac2682b20b4033dd4bd42547fb036b0d1d323e6164b9d41fc0d26de64893c308b5c7f3109087
+DIST phpldapadmin-1.2.2.tgz 1415565 SHA256 8629ea3f14630d4dd74099c997ac9795240a6417d5d124517ba5860c12d8a239 SHA512 262e177258fc0e107833eeee3df3352fa66f099baa2ebd30ff3c5aa42dbf95811c4a7c5effda423171a8ac3558f03aa100ab6f48818c9df1f3ab6bb1e1e17e99 WHIRLPOOL 9d71144996308ced445ae7c09849f5c3cc72a58123bc17d5fe1301a947bd13922e391ed198231fad5a54a2075af9fa8da9c2e7c4dbae28263a678260864e568e
+DIST phpldapadmin-1.2.3.tgz 1115707 SHA256 aecaf8c3ce77ba3899dd31ee5ee183555b2f9349eb8e196dcd33d8a3c485ed58 SHA512 58a57ca577586685ebd0d7fde7e299b8945d1693018c7803e19239b79f4b9d72a4d207d53c9f284268e32398108038efafcdb434e634619bfe87db3524d267b6 WHIRLPOOL 2d8cf7dc9e3b509ed6884efa280e554aa34703ca829f377304b99ded20ad144ff445cae3630e83dbfdcccc83799a85a3a2301903a4e298faf0884d3201ca0d21
+EBUILD phpldapadmin-1.2.0.4-r1.ebuild 983 SHA256 cbb2de3c6c29336841d910feaf10b559158f85031f47b52d3f1574f2d985b79b SHA512 41c2c77d3b4df4a35031f60aa9d03118b4be3938278c1ff9caed8a84e974ef4364054a5df2fa2df05204e665f4ab526663de8e856ab9140631f3e69a0ec9c202 WHIRLPOOL df881eaea999ea1889e7e9f3749aba6a675ee712baf8067148f5f3ef1f809ff1e3bfe7dd00a243e27b7f7a2be31342eaa00f2c0b120730910efe4239ec4a7ea5
+EBUILD phpldapadmin-1.2.0.5.ebuild 970 SHA256 b785da167be298f837071d8e8d5a741d2c6f1e18038badd54349ed111f0e04d5 SHA512 747616e96b0460dc6d7b2afc1c9c4c688ed2fcc9e3478d75f29ab7fcefb419784cc4dfe8e1c122c41eb5aed04819a2b0a793dac55c7f71a12c5a2e1dcb916a68 WHIRLPOOL 1110100745fea27fa43a03fee63e894a62bb6433be65bbd74ce3aed6fbfaca5192bfbf6272845af3dd952b8c58d50eff76134154c5236c2f0c9a2f8da534a212
+EBUILD phpldapadmin-1.2.1.1-r1.ebuild 1359 SHA256 f1f21dc696d4f862bfffdf45bd8b0b5d32d62fa9731713ae3dbc3c447ea3b5e4 SHA512 ed92fba2e08390a099134c2dfd6a1eabbffb188bbe656e4af5b5269f9b2f822014f5c8eb3631cf2a63c7ba4e55da17cfde7be56f3d32ca8b7d2d7f44b80f6e52 WHIRLPOOL 694d25b12c0f2ad8e7cf75b17c39d419333e57e404b85a077e777a6ed214858083c9a6a4aadf9f4ae10f48a221c2522d64dcb1785018ee531c2fc725bc9da424
+EBUILD phpldapadmin-1.2.1.1.ebuild 1129 SHA256 40f439fbda56140a71f345358aeb603b17440464497a0168b28368a157ca5591 SHA512 778660012b1fb5f9ad79423d0d8f48773fa9fea03e2ea00ba871ea5256ca9667096feb6322abdac6a582cc6521f0c7c52a8500115726eba1cc3cdf3baa98504d WHIRLPOOL 9122097285cb27b93ecc9ceb90750182ea6523d714c410ea6c7d24ea999917d8e087da862c1fa3d7d41f68954235c3e47e2e3c56b1d2c76622428ae8cdaa738e
+EBUILD phpldapadmin-1.2.2-r1.ebuild 1315 SHA256 28fff8e9869aae9519cfadd4e24e8acbbb509e18b0eef5ab8f9a9d372aba933c SHA512 c37a6d8ca8155ff145d3e8f3394c0ced4fce34556d41358044d335418d4a723fa15a5ddd0168c9f04d9b754705ae6da1400178b059e356d0f4b52bd39387685f WHIRLPOOL 152e91e4986bc088a74fa479580bade5d395a91e831c38377c2ab4a80243dc69bb5383f79b3c2a1083f8e312c5d2213305cdb936c0e06411b0ebb54e3a07f9b4
+EBUILD phpldapadmin-1.2.2.ebuild 1136 SHA256 301a656b15c19f35f85c9bae9607fff14c4c58664849b0dd10bb97a53d0f3f65 SHA512 4f085d667979d58c50cf5a4032a2d80c5c6410ce58d0aaf9bb5c5cf96cbd981876d909b67044e9ab61637363e22b3aa131e42b1e37fbcf7954d1656c559edbe8 WHIRLPOOL 9eba2b05ad32458567ed2a493411f8768833691fd7959071137aa9f7c45f671784567e3f8a6997581e18cfdfa2802ef995e43875a1933f150493f4eba52458bc
+EBUILD phpldapadmin-1.2.3.ebuild 1274 SHA256 5d1a3ec34b1b2d9ee6e3837cb83e964c373a0f1b961135835a33a3d877a4d86a SHA512 317c2c38434c03fe1297d43ae2c78c724d6e6ebdc67f7bc53b9af2af9b317917ce3d5b9e7bbb9a37b1e4c7fa1b6e1dbb4c777db284a33a111284c6a1e4562e16 WHIRLPOOL 77a10d5d73fd139ad8bbaa166c293adc9a47cbc60214da7149e49b99da2119982ea134ead487a9b5abc1a24c1485e9618ab924b27ea8e222c79ffe7886bc1736
+MISC ChangeLog 9686 SHA256 9ec648816c0ea54abae0cad00e4ad90e42eddb3f8b4892718e2b348f553b65d9 SHA512 61b68d707bba9810da6d741672dd390359c5b8d9f14f1d519f0f66ed9e3a1604b43bd0126b3403abec5ce4737356416cfe9bed62920e873db83cbb97378d11f8 WHIRLPOOL 26fc24b299ec5a049bfa7f473680d7b52311cd70487b177cb9a9110aeb7f59d6b2448224de7e0850a1b3979d54e2133d62df51397a68f9492ccd75b4bc330b93
+MISC metadata.xml 483 SHA256 4da024bde528d8117f42de927efa5e86dd4445b018a818608e1db16969957186 SHA512 a7c5dc00056dbb3a8ea5257813ac1c46ff47a61ce3bff3ebcee72958a002d5431014ddcbf1c360af18ef8add9028f69d96f25eeb5ec90f593d45f6c650ca40a4 WHIRLPOOL 6d16bccda8ef58a5802e4169d250128dfc92e023af8743834f3819605aa27f500b4c08a943e1f6762623ebf4ac53689fc53f9572976e9cea4d9fa7ec09311c37
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPKv0KAAoJEC8ZTXQF1qEP3H0QAJt7AKEfmPBxdz3u0FzrOPbl
-8y6Hs9WLDYD5LEcpbKMa5/wddKlO/2OemIlodovoMYQdac0bA6bDQKtkG3wCIcrv
-DHXHiQI/hD2lzK3R4BQj6iAuCZs43MtCFzxRUCV0MqVIjWVf9CUJ7//CsHtqV79d
-Ac7VUvOSmk218zvmHGTOttwrbv5sIZtQ1vXVl0LEPHp+QS82CwwU6S7d9bU2KPJA
-EVf5Dw0rqq9d7dOkK+8UqnC4s+voEpS8jK7BHgON6lJpYupvog9e5Ro2Noa0cmCG
-QHiZmu56ewAr4VRgxt5hy0wobCWhEz4pYElKja8LvcOk7cCAlOqId1LASD6HVWLS
-uksxObxQV3QW6X76ViG2Rkon3ZKvyuBuY0sshDztK31P6gHp1jpe96zGebqBI/AG
-z3IP9qd1g16VmFYjzVye1+sxKcdt9jpMMClVS5E/+yavZq1mmW9WgUNHJ12nBMvh
-0oRFGxR0MGREA7pJcNjax4Vtgk1a78sUBTrcIKGRtrl7Ff0rT8LcSRH6Yf1ivU+H
-kkeIuYqb3LC4SACdnWSd4ceTuBYV776tbQvbnA1yb2GxmTiiepOLc7gmXlMe2Z8v
-5H8OBozF8BZgZz+/eK/tyH6ubf10TRKLtTTZrjyMLDxvKRR1clAXhUQ458OG/9HN
-aILT0KZm83WPziA9nLjU
-=DLUf
+iQIcBAEBCAAGBQJQoOWhAAoJEC8ZTXQF1qEPDH8QAJoP921F5g6eybv9WUmNk5EC
+pCHNsiHKWOJ9HbSvX/adWZMmReD5wUyH5uzeb3wmfF7+YUbTmy6Es33Z4ABGEIai
+3Tw8RfXTyELtQj3Z2x8vXL6fucSQqYoYvV/GWcLOiyx3NFMQD4ECZBKLtLQkVLIO
+gzrlqXPc8zJPUCaELRz+9FU9f7qOorTT5/CSgfEg/k0gyQxNr+fOXwgYgiZtYnqA
+bfhzL6Fni97twJ+k2j70KBa5nEM5kramWXwec77bhh5iWDFSIbIOKrd3e/f1N371
+7WFUIkKlorWJ9Zupg589qRauXNxR9fD5kaS8qy5sH0kLpiMM05ZokmbHbtCgGCP6
+YsqBI2dTf6tFknQ/VPNQEnE0JNAyONBQbQCaROCm3MqcjEmPIB5u06l1gguFdPsb
+48kzYz/T0nBEuCVFiJ6Syr0qKMczz0rJlDgM7AZdVKEFcZpiogIQYbNfEJYGC3p6
+0yRFuTirDtvgT6+zhzqPbg4nwt1KKG7Juf0HGakSvfsDy09XMZmCkZi/Aqxb5UfY
+2mkCcHNKpInTFEloF0dtQmePW33v/xfU2G2ALcUijmC6+6Bwk9FGCtdVNoiqqZfe
+1GLxass+reIbaSVf/UatrfDIp85pBnQYm/qVdYEgcYc/E3pUV5n7+Coxbb0rvf/n
+DSAUkyplPotgglrmP7DS
+=9cWQ
 -----END PGP SIGNATURE-----
