@@ -1,6 +1,12 @@
 # ChangeLog for net-nds/phpldapadmin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/phpldapadmin/ChangeLog,v 1.56 2012/02/02 21:18:10 jmbsvicetto Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/phpldapadmin/ChangeLog,v 1.57 2012/11/12 12:04:32 jmbsvicetto Exp $
+
+*phpldapadmin-1.2.3 (12 Nov 2012)
+
+  12 Nov 2012; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  +phpldapadmin-1.2.3.ebuild:
+  [net-nds/phpldapadmin] Version 1.2.3 bump.
 
 *phpldapadmin-1.2.2-r1 (02 Feb 2012)
 
@@ -291,4 +297,3 @@
 
   13 Nov 2003; Don Seiler <rizzo@gentoo.org>; phpldapadmin-0.9.1.ebuild:
   Initial add.  Thanks to Evan McNabb for ideas
-
